# httpet

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  docker-compose.yml  justfile  mise.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_container.yml
data/: status_codes.json
scripts/: get_description.sh
src/: cli.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  status_codes.rs
src/db/: mod.rs
src/db/entities/: mod.rs  pets.rs  votes.rs
src/db/migrations/: m0001_create_pets_votes.rs  m0002_add_pet_status.rs  m0003_pet_status_char.rs  mod.rs
src/web/: admin.rs  csrf.rs  flash.rs  images.rs  middleware.rs  mod.rs  prelude.rs  views.rs
src/web/views/: vote.rs
static/: styles.css
templates/: about.html  admin.html  admin_base.html  admin_delete.html  admin_pet.html  admin_upload.html  base_template.html  home.html  not_found.html  status_info.html  status_list.html  vote_page.html  vote_thanks.html
tests/: test_status_updater.rs
